# oc_mlops

./: .gitattributes  .gitignore  README.md  config_optuna.py  docker-compose.yml  feature_engineering.py  optimize_models.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: Dockerfile.api.fly  Dockerfile.api.render  Dockerfile.streamlit.fly  Dockerfile.streamlit.render  README.md  docker-compose.yml  fly-api.toml  fly-streamlit.toml  flyio.md  render.md  render.yaml  suggestions.md
app/api/: Dockerfile  main.py  pyproject.toml  requirements.txt
app/data/: drift_reference.parquet  holdout_sample.parquet  holdout_test.parquet
app/logs/: predictions.jsonl
app/models/: model.pkl  model_metadata.json
app/scripts/: split_holdout.py
app/streamlit/: Dockerfile  app.py  drift.py  pyproject.toml  requirements.txt
app/streamlit/data/: drift_reference.parquet
notebooks/: analyse_exploratoire.ipynb  modelisation.ipynb  modelisation_avancee.ipynb  modelisation_test.ipynb  modelisation_undersampling.ipynb
tests/: conftest.py  test_api.py  test_drift.py
