[project]
name = "oc-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "boto3>=1.42.44",
    "imblearn>=0.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "missingno>=0.5.2",
    "mlflow>=2.9.0,<3.0.0",
    "numpy>=2.3,<2.4",
    "optuna>=4.7.0",
    "optuna-integration>=4.7.0",
    "pandas>=2.0.0,<3.0.0",
    "protobuf>=3.19.0,<5",
    "pyarrow>=14.0.0,<22",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "setuptools>=68.0.0",
    "shap>=0.50.0",
    "shape>=0.1.1",
    "xgboost>=3.2.0",
    "evidently>=0.5.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov=tests --cov-report=term-missing --cov-report=html"

[dependency-groups]
dev = [
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "uvicorn>=0.40.0",
]
